fix: change Java version to 11